2016.09.19 Kentaro Fukuchi <kentaro@fukuchi.org>
	* qrenc.c, qrencode.c, split.c:
	  - Merged #82. (Thanks to @UniQP)
	  - Various code cleanups.

2016.09.18 Kentaro Fukuchi <kentaro@fukuchi.org>
	* CMakeLists.txt:
	  - Merged #83. (Thansk to @misery)
	  - This allows CMake users building the library without configure script.
	    IF you are using incomplete UNIX-like environment and configure script
		does not work as expected, try CMake.
	* README, README.md:
	  - Added some notes about CMake.

2016.05.18 Kentaro Fukuchi <kentaro@fukuchi.org>
	* acinclude.m4:
	  - iconv.m4 has been updated to serial 19.
	* configure.ac, Makefile.am, tests/Makefile.am:
	  - MinGW support has been improved.
	* README, README.md:
	  - ACKNOWLEDGMENTS has been updated.
	* qrencode.c:
	  - Memory leak bug fixed. (Closes #81. Thanks to @win32asm)
	* Various code cleanups. (Merged #72. Thanks to @UniQP)

2016.05.15 Kentaro Fukuchi <kentaro@fukuchi.org>
	* configure.ac:
	  - Merged pull-request #80. (Thanks to @EckoEdc)
	  - Add LDFLAGS for mingw compilation.

2016.04.02 Kentaro Fukuchi <kentaro@fukuchi.org>
	* tests/common.h:
	  - Code refactoring.
	  - New debug functions have been added.
	* tests/decoder.[ch], tests/test_monkey.c:
	  - QRcode_extractBits() has been extended. This will be used later.
	* tests/decoder.[ch]:
	  - eccResult has been added to QRdata.
	  - Code refactoring.
	* tests/decoder.[ch], tests/datachunk.[ch], tests/Makefile.am:
	  - Code refactoring.

2016.03.30 Kentaro Fukuchi <kentaro@fukuchi.org>
	* bitstream.[ch], tests/test_bitstream.c:
	  - Added new function BitStream_newWithBits() and tests for it.
	* tests/decoder.[ch], tests/test_monkey.c:
	  - Code refactoring.

2016.03.29 Kentaro Fukuchi <kentaro@fukuchi.org>
	* tests/view_qrcode.c:
	  - Added mask=-2 mode for debug purpose.
	* bitstream.c, qrencode.c:
	  - Incorrect bit padding has been fixed. (Thanks to Yuji Ueno)
	* tests/test_bitstream.c, tests/test_qrencode.c: